--- a/assets/css/idealx-style-unmin.css
+++ b/assets/css/idealx-style-unmin.css
@@ -203,6 +203,17 @@ button:focus,
   outline: dotted 2px;
   transition: outline 0.6s linear;
 }
+#m-t-offcanvas a:focus {
+  outline: dotted 1px;
+  transition: outline 0.6s linear;
+}
+#m-t-offcanvas button:focus {
+  outline: dotted 1px;
+  transition: outline 0.6s linear;
+}
+#idealx-mobile-nav{
+  margin-top: 25px;
+}
 /*--------------------------------------------------------------
 * Typography
 --------------------------------------------------------------*/
