--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*
 Theme Name:  IdealX
 Text Domain: idealx
-Version:     1.0.0
+Version:     1.0.1
 Requires at least: 5.0
 Tested up to: 5.4.2
 Requires PHP: 7.0
@@ -10,7 +10,7 @@ Tags: rtl-language-support, blog, e-commerce
 Author:      Mohamed Taman
 Theme URI:   https://idealx.mtaman.me/
 Author URI:  https://github.com/mtaman
-License: GNU General Public License v2 or later
+License: GNU General Public License v2.0
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 
 All files, unless otherwise stated, are released under the GNU General Public
